--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
     padding: 0;
     font-family: sans-serif;
 }
+html {
+    --primary-color: rgb(224, 153, 0);
+    --secondary-color: rgb(253, 255, 108);
+}
 body {
-    background: rgb(89,191,222);
-    background: linear-gradient(45deg, rgba(89,191,222,1) 0%, rgba(204,61,244,1) 100%);
+    background: var(--primary-color);
+    background: linear-gradient(45deg, var(--primary-color) 0%, var(--secondary-color) 100%);
     height: 100vh;
 }
 .center-wrapper {
@@ -19,8 +23,8 @@ button {
     width: 100%;
     padding: 20px;
     border-radius: 30px;
-    background: rgb(204,61,244);
-    background: linear-gradient(90deg, rgba(204,61,244,1) 0%, rgba(89,191,222,1) 100%);
+    background: var(--secondary-color);
+    background: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
     color: white;
     border: none;
     font-size: large;
